# Maze-Gen

./: Cargo.toml  README.md  day05.rs
benches/: algorithm_benchmarks.rs
src/: lib.rs  main.rs  mod.rs
src/cells/: cell.rs
src/generation/: aldous_broder.rs  backtracker.rs  binary_tree.rs  division.rs  ellers.rs  hunt_and_kill.rs  mod.rs  sidewinder.rs  wilsons.rs
src/grids/: animated_grid.rs  core.rs  grid.rs  mod.rs  rect_grid.rs
