[package]
name = "maze_gen"
version = "0.1.0"
authors = ["Joseph Dye <jpzh.dye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbr = "1.0.4"

image = "0.23"
rand = "0.8.3"

indexmap = "1.6.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "algorithm_benchmarks"
harness = false